--- a/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
@@ -18,9 +18,14 @@ type {{.CapsResourceNameSingular}}Dao struct {
 func migrate{{.CapsResourceNamePlural}}(r *sqls.SQLiteClient) error {
 	query := `
 	CREATE TABLE IF NOT EXISTS {{.SmallResourceNamePlural}}(
-		Id INTEGER PRIMARY KEY AUTOINCREMENT,
+	  {{if .IsIntID}}
+	    ID INTEGER PRIMARY KEY AUTOINCREMENT,
+        {{end}}
+      {{if .IsStringID}}
+        ID TEXT PRIMARY KEY,
+      {{end}}
         {{.CreateQueryColumns}}
-        CONSTRAINT id_unique_key UNIQUE (Id)
+        CONSTRAINT id_unique_key UNIQUE (ID)
 	)
 	`
 	_, err1 := r.DB.Exec(query)
@@ -52,7 +57,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Creat
     if err != nil {
         return nil, err
     }
-    m.Id = id
+    m.ID = id
 
 	log.Debugf("{{.SmallResourceNameSingular}} created")
     return m, nil
@@ -76,7 +81,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
                {{GetCompositeFields $k}}
            {{end}}
         }
-        if err = rows.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
+        if err = rows.Scan(&m.ID, {{.GetQueryExecColumns}}); err != nil {
             return nil, err
         }
         {{.SmallResourceNamePlural}} = append({{.SmallResourceNamePlural}}, &m)
@@ -92,14 +97,14 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
 
 {{ if .IsRESTGetAllowed }}
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}) (*models.{{.CapsResourceNameSingular}}, error) {
-    selectQuery := "SELECT * FROM {{.SmallResourceNamePlural}} WHERE Id = ?"
+    selectQuery := "SELECT * FROM {{.SmallResourceNamePlural}} WHERE ID = ?"
     row := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.QueryRow(selectQuery, id)
     m := models.{{.CapsResourceNameSingular}} {
        {{range $k, $v := .Fields}}
            {{GetCompositeFields $k}}
        {{end}}
     }
-    if err := row.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
+    if err := row.Scan(&m.ID, {{.GetQueryExecColumns}}); err != nil {
         if errors.Is(err, sql.ErrNoRows) {
             return nil, sqls.ErrNotExists
         }
@@ -117,7 +122,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
     if id == 0 {
         return nil, errors.New("invalid {{.SmallResourceNameSingular}} ID")
     }
-    if id != m.Id {
+    if id != m.ID {
         return nil, errors.New("id and payload don't match")
     }
 {{end}}
@@ -138,7 +143,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
         return nil, sql.ErrNoRows
     }
 
-    updateQuery := "UPDATE {{.SmallResourceNamePlural}} SET {{.UpdateQueryColumnsAndParams}} WHERE Id = ?"
+    updateQuery := "UPDATE {{.SmallResourceNamePlural}} SET {{.UpdateQueryColumnsAndParams}} WHERE ID = ?"
     res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(updateQuery, {{.UpdateQueryExecColumns}}, id)
     if err != nil {
         return nil, err
@@ -158,7 +163,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
 
 {{ if .IsRESTDeleteAllowed }}
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id {{GetPrimaryKeyType}}) error {
-    deleteQuery := "DELETE FROM {{.SmallResourceNamePlural}} WHERE Id = ?"
+    deleteQuery := "DELETE FROM {{.SmallResourceNamePlural}} WHERE ID = ?"
     res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(deleteQuery, id)
     if err != nil {
         return err
