fix: issues in GetPrimaryKey template func

--- a/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
@@ -1,7 +1,7 @@
 package models
 
 type {{.CapsResourceNameSingular}} struct {
-{{ GetPrimaryKey }}
+{{GetPrimaryKey ""}}
 {{range $k, $v := .Fields}}
     {{if eq $k "ID"}}
     {{else}}
