enhancement: added uuid imports and used them in create method

--- a/frameworks/go-gin-server/pkg/rest/server/daos/dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/dao.go.tmpl
@@ -3,9 +3,17 @@ package daos
 import (
 	"errors"
 	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+{{if .IsStringID}}
+    "github.com/google/uuid"
+{{end}}
 )
 
+{{if .IsStringID}}
+var {{.SmallResourceNamePlural}} = make(map[string]*models.{{.CapsResourceNameSingular}})
+{{end}}
+{{if .IsIntID}}
 var {{.SmallResourceNamePlural}} = make(map[int64]*models.{{.CapsResourceNameSingular}})
+{{end}}
 
 type {{.CapsResourceNameSingular}}Dao struct {
 }
