--- a/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
@@ -1,4 +1,7 @@
 package models
+{{if .IsStringID}}
+import "github.com/google/uuid"
+{{end}}
 
 type {{.CapsResourceNameSingular}} struct {
 {{GetPrimaryKey ""}}
