--- a/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-model.go.tmpl
@@ -1,5 +1,7 @@
 package models
-
+{{if .IsStringID}}
+ import "github.com/google/uuid"
+{{end}}
 type {{.CapsResourceNameSingular}} struct {
     {{GetPrimaryKey ""}}
     {{range $k, $v := .Fields}}
