enhancement: added AddFieldWithDetails func for handling array type fields

--- a/frameworks/go-gin-server/pkg/rest/server/models/sqls-gorm-model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/sqls-gorm-model.go.tmpl
@@ -13,7 +13,7 @@ type {{.CapsResourceNameSingular}} struct {
 {{range $k, $v := .Fields}}
     {{if eq $k "ID"}}
     {{else}}
-    {{AddForeignKeyIfCompositeField $k $v}}
+    {{AddFieldWithDetails $k $v "gorm"}}
     {{end}}
 {{end}}
 }
