--- a/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/sqls-model.go.tmpl
@@ -8,7 +8,7 @@ type {{.CapsResourceNameSingular}} struct {
 {{range $k, $v := .Fields}}
     {{if eq $k "ID"}}
     {{else}}
-    {{$k}} {{AddPointerIfCompositeField $k}} `json:"{{ToLowerCamelCase $k}},omitempty"`
+    {{AddFieldWithDetails $k $v "sql"}}
     {{end}}
 {{end}}
 }
