enhancement: added AddFieldWithDetails func for handling array type fields in grpc

--- a/frameworks/go-grpc-server/pkg/grpc/server/models/nosqls-model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/nosqls-model.go.tmpl
@@ -5,7 +5,7 @@ type {{.CapsResourceNameSingular}} struct {
     {{range $k, $v := .Fields}}
         {{if eq $k "ID"}}
         {{else}}
-            {{$k}} {{$v}}  `json:"{{ToLowerCamelCase $k}},omitempty" bson:"{{ToLowerCamelCase $k}},omitempty"`
+            {{AddFieldWithDetails $k $v "mongo"}}
         {{end}}
     {{end}}
 }
