--- a/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-model.go.tmpl
@@ -7,7 +7,7 @@ type {{.CapsResourceNameSingular}} struct {
 {{range $k, $v := .Fields}}
     {{if eq $k "ID"}}
     {{else}}
-    {{$k}} {{$v}} `json:"{{ToLowerCamelCase $k}},omitempty"`
+    {{AddFieldWithDetails $k $v "sql"}}
     {{end}}
 {{end}}
 }
