--- a/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-gorm-model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/sqls-gorm-model.go.tmpl
@@ -13,7 +13,7 @@ type {{.CapsResourceNameSingular}} struct {
 {{range $k, $v := .Fields}}
     {{if eq $k "ID"}}
     {{else}}
-    {{AddForeignKeyIfCompositeField $k $v}}
+    {{AddFieldWithDetails $k $v "gorm"}}
     {{end}}
 {{end}}
 }
