fix: added go get command to fetch the latest deps

--- a/.github/workflows/ci.yml.tmpl
+++ b/.github/workflows/ci.yml.tmpl
@@ -33,6 +33,7 @@ jobs:
       - name: Build
         run: |
           cd [[.NodeName]]
+          go get ./...
           go mod tidy
           go build -v ./...
           cd ..
