chore: fetch imports and params based on conditions about methods.

--- a/frameworks/go-gin-server/pkg/rest/server/daos/scylladb-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/scylladb-dao.go.tmpl
@@ -3,7 +3,9 @@ package daos
 
 import (
  "{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/nosqls"
+ {{ if or .IsRESTGetAllowed .IsRESTCreateAllowed .IsRESTListAllowed .IsRESTPutAllowed }}
 "{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+ {{ end }}
  "github.com/scylladb/gocqlx/v2"
  "github.com/scylladb/gocqlx/v2/qb"
  log "github.com/sirupsen/logrus"
