--- a/frameworks/go-gin-server/pkg/rest/server/controllers/nosqls-column-based-controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/nosqls-column-based-controller.go.tmpl
@@ -2,8 +2,12 @@ package controllers
 
 import (
 	"github.com/gin-gonic/gin"
-  "github.com/google/uuid"
+	{{ if .IsRESTCreateAllowed }}
+  	"github.com/google/uuid"
+	{{ end }}
+	{{ if or .IsRESTCreateAllowed .IsRESTPutAllowed }}
 	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+	{{ end }}
 	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/services"
 	log "github.com/sirupsen/logrus"
 	"net/http"
